--- a/Miner/Miner.csproj
+++ b/Miner/Miner.csproj
@@ -46,24 +46,45 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Controllers\Game.cs">
+    <Compile Include="Controllers\GameForm\GameForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Controllers\Game.Designer.cs">
-      <DependentUpon>Game.cs</DependentUpon>
+    <Compile Include="Controllers\GameForm\GameForm.Designer.cs">
+      <DependentUpon>GameForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="Controllers\MapController.cs" />
-    <Compile Include="Controllers\menu.cs" />
-    <Compile Include="Form1.cs">
+    <Compile Include="Controllers\GameForm\MapController.cs" />
+    <Compile Include="Controllers\InputUsernameForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="Controllers\InputUsernameForm.Designer.cs">
+      <DependentUpon>InputUsernameForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Controllers\LeadersForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Controllers\LeadersForm.Designer.cs">
+      <DependentUpon>LeadersForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FormsClass.cs" />
+    <Compile Include="MainForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MainForm.Designer.cs">
+      <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="Controllers\GameForm\GameForm.resx">
+      <DependentUpon>GameForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Controllers\InputUsernameForm.resx">
+      <DependentUpon>InputUsernameForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Controllers\LeadersForm.resx">
+      <DependentUpon>LeadersForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MainForm.resx">
+      <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
